--- a/EmployeeDetails/Views/Employee/Details.cshtml
+++ b/EmployeeDetails/Views/Employee/Details.cshtml
@@ -50,5 +50,5 @@
 </div>
 <div>
     <a href="@Url.Action("Create", "Employee", new { id = Model.EmpId })" class="btn btn-primary">Edit</a> | 
-   <a asp-action="Index">Back to List</a>
+    <a href="@Url.Action("Index", "Employee")" class="btn btn-dark">Back</a>
 </div>
