--- a/EmployeeDetails/Views/Employee/Delete.cshtml
+++ b/EmployeeDetails/Views/Employee/Delete.cshtml
@@ -52,6 +52,6 @@
     <form asp-action="Delete">
         <input asp-for="EmpId" value="@Model.EmpId" hidden />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+         <a href="@Url.Action("Index", "Employee")" class="btn btn-dark">Back</a>
     </form>
 </div>
